site-web/deployment-veggie-site.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mesbonslegumes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mesbonslegumes
  template:
    metadata:
      labels:
        app: mesbonslegumes
    spec:
      containers:
        - name: mesbonslegumes
          image: hazegoodlife/haaze:veggiesite
          ports:
            - containerPort: 80
