site-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monbonlait-service
spec:
  selector:
    app: monbonlait
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mesbonslegumes-service
spec:
  selector:
    app: mesbonslegumes
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mesbonslegumes-bio-service
spec:
  selector:
    app: mesbonslegumes-bio
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
